--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>Test!!!</h1>
+<app-elements-home></app-elements-home>
+<app-collections-home></app-collections-home>
+
+<router-outlet></router-outlet>
