--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,2 +1,4 @@
-<app-divider></app-divider>
+<app-divider>
+  Placeholder Component
+</app-divider>
 <app-placeholder [lines]="10"></app-placeholder>
