Creating a Segment Component

--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,4 +1,10 @@
 <app-divider>
   Placeholder Component
 </app-divider>
-<app-placeholder [lines]="10"></app-placeholder>
+<app-placeholder [lines]="5"></app-placeholder>
+<app-divider></app-divider>
+<app-divider>
+  Segment Component
+</app-divider>
+<app-segment></app-segment>
+<app-divider></app-divider>
