--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -6,5 +6,14 @@
 <app-divider>
   Segment Component
 </app-divider>
-<app-segment></app-segment>
+<app-segment>
+  <header>
+    <i class="pdf file outline icon"></i>
+    No documents are listed for this customer.
+  </header>
+
+  <button class="ui primary button">
+    Add Document
+  </button>
+</app-segment>
 <app-divider></app-divider>
