--- a/src/app/views/views-home/views-home.component.html
+++ b/src/app/views/views-home/views-home.component.html
@@ -1,1 +1,3 @@
-<app-statistics></app-statistics>
+<app-divider>Statistics Component</app-divider>
+<app-statistics [data]="stats"></app-statistics>
+<app-divider></app-divider>
