--- a/src/app/views/views-home/views-home.component.html
+++ b/src/app/views/views-home/views-home.component.html
@@ -1,3 +1,6 @@
 <app-divider>Statistics Component</app-divider>
 <app-statistics [data]="stats"></app-statistics>
 <app-divider></app-divider>
+<app-divider>Item list Component</app-divider>
+<app-item-list [items]="items"></app-item-list>
+<app-divider></app-divider>
