--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -10,3 +10,5 @@
   </ng-container>
 </app-modal>
 <app-divider></app-divider>
+<app-divider>Accordion Component</app-divider>
+<app-accordion></app-accordion>
